[MAJ] Module articles

--- a/articles/config.ini
+++ b/articles/config.ini
@@ -1,5 +1,5 @@
-author="ReidLos, Yannick"
-author_mail="soldier.weasel@gmail.com, yanx1990@gmail.com"
+author="ReidLos"
+author_mail="soldier.weasel@gmail.com"
 author_website="http://www.phpboost.com"
 version=4.0
 date="25/04/11"
