--- a/online/config.ini
+++ b/online/config.ini
@@ -4,5 +4,6 @@ author_website="http://www.phpboost.com"
 version=4.0
 date="07/20/05"
 compatibility="4.0"
-admin_main_page="admin_online.php"
+admin_main_page="index.php?url=/admin/config"
+home_page="index.php"
 admin_menu="modules"
