--- a/search/config.ini
+++ b/search/config.ini
@@ -1,10 +1,13 @@
 author="horn"
 author_mail="horn@phpboost.com"
 author_website="http://www.phpboost.com"
-version=4.0
-repository=http://www.phpboost.com/repository/main.xml
+version=1.0
 date="27/01/08"
 compatibility=4.0
-admin_main_page="index.php?url=/admin"
-admin_menu="modules"
-home_page="index.php"
+admin="modules"
+css=1
+cache=1
+sql_table=0
+starteable_page="search.php"
+cache=1
+;config="a:2:{s:19:"nb_results_per_page";i:15;s:20:"unauthorized_modules";a:0:{}}"
