[MAJ] Config.ini du module recherche

--- a/search/config.ini
+++ b/search/config.ini
@@ -4,8 +4,6 @@ author_website="http://www.phpboost.com"
 version=1.0
 date="27/01/08"
 compatibility=4.0
-admin="modules"
-css=1
-cache=1
-sql_table=0
-starteable_page="search.php"
+admin_menu="modules"
+admin_main_page="admin_search.php"
+home_page="search.php"
