--- a/templates/publishing/config/french/config.ini
+++ b/templates/publishing/config/french/config.ini
@@ -9,8 +9,7 @@ compatibility=4.0
 require_copyright=0
 html_version=1.0 Strict
 css_version=2.1
-left_column=0
-right_column=0
+columns_disabled=right,left
 main_color="Blanc, Noir, Bleu"
 variable_width=0
 width="947px"
