--- a/templates/base/config/english/config.ini
+++ b/templates/base/config/english/config.ini
@@ -1,5 +1,5 @@
 name="Base"
-author="L'equipe PHPBoost"
+author="PHPBoost"
 author_mail="reidlos@phpboost.com"
 author_link="http://www.phpboost.com"
 version=4.0
