[MAJ] R?gles de r??criture des urls, ?a am?liorera grandement le r?f?rencement

--- a/bugtracker/config.ini
+++ b/bugtracker/config.ini
@@ -7,4 +7,4 @@ compatibility="4.0"
 home_page="index.php"
 admin_main_page="admin_bugtracker.php"
 admin_menu="modules"
-rewrite_rules[]="RewriteRule ^(.*)bugtracker/bugtracker-([0-9]+)(\+?[^.]*)\.php$ DIR/bugtracker/bugtracker.php?view&id=$2 [L,QSA]"
+rewrite_rules[]="RewriteRule ^bugtracker/bugtracker-([0-9]+)(\+?[^.]*)\.php$ DIR/bugtracker/bugtracker.php?view&id=$1 [L,QSA]"
