--- a/pages/config.ini
+++ b/pages/config.ini
@@ -6,4 +6,4 @@ date="07/08/07"
 compatibility="4.0"
 admin_main_page="admin_pages.php"
 admin_menu="modules"
-rewrite_rules[]="RewriteRule ^(.*)pages/([a-z0-9-]+)$ DIR/pages/pages.php?title=$2"
+rewrite_rules[]="RewriteRule ^pages/([a-z0-9-]+)$ DIR/pages/pages.php?title=$1"
