--- a/stats/config.ini
+++ b/stats/config.ini
@@ -6,4 +6,4 @@ date="14/07/05"
 compatibility="4.0"
 admin_main_page="admin_stats.php"
 admin_menu="tools"
-rewrite_rules[]="RewriteRule ^(.*)stats/stats-([a-z]+)\.php$ DIR/stats/stats.php?$2=1 [L,QSA]"
+rewrite_rules[]="RewriteRule ^stats/stats-([a-z]+)\.php$ DIR/stats/stats.php?$1=1 [L,QSA]"
