--- a/wiki/config.ini
+++ b/wiki/config.ini
@@ -7,4 +7,4 @@ compatibility="4.0"
 admin_main_page="admin_wiki.php"
 admin_menu="modules"
 home_page="wiki.php"
-rewrite_rules[]="RewriteRule ^(.*)wiki/([a-z0-9-]+)$ DIR/wiki/wiki.php?title=$2"
+rewrite_rules[]="RewriteRule ^wiki/([a-z0-9-]+)$ DIR/wiki/wiki.php?title=$1"
