--- a/articles/config.ini
+++ b/articles/config.ini
@@ -9,4 +9,4 @@ admin_menu="modules"
 home_page="articles.php"
 contribution_interface="management.php?new=1"
 mini_modules="articles_mini.php => right"
-rewrite_rules[]="RewriteRule ^(.*)articles/articles-([0-9]+)-?([0-9]*)-?([0-9]*)(\+?[^.]*)\.php$ DIR/articles/articles.php?cat=$2&id=$3&p=$4 [L,QSA]"
+rewrite_rules[]="RewriteRule ^articles/articles-([0-9]+)-?([0-9]*)-?([0-9]*)(\+?[^.]*)\.php$ DIR/articles/articles.php?cat=$1&id=$2&p=$3 [L,QSA]"
