--- a/poll/config.ini
+++ b/poll/config.ini
@@ -7,4 +7,4 @@ compatibility="4.0"
 admin_main_page="admin_poll.php"
 admin_menu="modules"
 home_page="poll.php"
-rewrite_rules[]="RewriteRule ^(.*)poll/poll-([0-9]+)-?([0-9]*)-?([0-9]*)\.php$ DIR/poll/poll.php?id=$2&r=$3&p=$4 [L,QSA]"
+rewrite_rules[]="RewriteRule ^poll/poll-([0-9]+)-?([0-9]*)-?([0-9]*)\.php$ DIR/poll/poll.php?id=$1&r=$2&p=$3 [L,QSA]"
