--- a/forum/config.ini
+++ b/forum/config.ini
@@ -7,6 +7,6 @@ compatibility="4.0"
 admin_main_page="admin_forum.php"
 admin_menu="modules"
 home_page="index.php"
-rewrite_rules[]="RewriteRule ^forum/forum-([0-9]+)-?([0-9]*)(\+?[^.]*)\.php$ /trunk/forum/forum.php?id=$1&p=$2 [L,QSA]"
-rewrite_rules[]="RewriteRule ^forum/topic-([0-9]+)-?([0-9]*)-?([0-9]*)-?([0-9]*)(\+?[^.]*)\.php$ /trunk/forum/topic.php?id=$1&pt=$2&idm=$3&quote=$4 [L]"
-rewrite_rules[]="RewriteRule ^forum/cat-([0-9]+)(\+?[^.]*)\.php$ /trunk/forum/index.php?id=$1 [L,QSA]"
+rewrite_rules[]="RewriteRule ^forum/forum-([0-9]+)-?([0-9]*)(\+?[^.]*)\.php$ DIR/forum/forum.php?id=$1&p=$2 [L,QSA]"
+rewrite_rules[]="RewriteRule ^forum/topic-([0-9]+)-?([0-9]*)-?([0-9]*)-?([0-9]*)(\+?[^.]*)\.php$ DIR/forum/topic.php?id=$1&pt=$2&idm=$3&quote=$4 [L]"
+rewrite_rules[]="RewriteRule ^forum/cat-([0-9]+)(\+?[^.]*)\.php$ DIR/forum/index.php?id=$1 [L,QSA]"
