--- a/guestbook/config.ini
+++ b/guestbook/config.ini
@@ -1,9 +1,10 @@
-author="CrowkaiT"
-author_mail="crowkait@phpboost.com"
-version=4.0
+author="CrowkaiT, julienseth78"
+author_mail="crowkait@phpboost.com, julien_seth_78@hotmail.fr"
 author_website="http://www.phpboost.com"
+version=4.1.0
 date=07/11/05
 compatibility="4.0"
-admin_main_page="admin_guestbook.php"
+home_page="/"
+admin_main_page="?url=/admin"
 admin_menu="modules"
-home_page="guestbook.php"
+rewrite_rules[]="RewriteRule ^guestbook/([\w/_-]*?)$ DIR/guestbook/index.php?url=/$1 [L,QSA]"
