--- a/calendar/config.ini
+++ b/calendar/config.ini
@@ -1,10 +1,9 @@
-author="CrowkaiT"
-author_mail="crowkait@phpboost.com"
+author="julienseth78"
+author_mail="julien_seth_78@hotmail.fr"
 author_website="http://www.phpboost.com"
-version=4.0
-date="01/29/06"
+version=4.1.0
+date="02/25/13"
 compatibility="4.0"
-admin_main_page="admin_calendar.php"
+home_page="/"
+admin_main_page="index.php?url=/admin"
 admin_menu="modules"
-home_page="calendar.php"
-rewrite_rules[]="RewriteRule ^(.*)calendar/calendar-([0-9]+)-([0-9]+)-([0-9]+)-?([0-9]*)\.php$ DIR/calendar/calendar.php?d=$2&m=$3&y=$4&e=$5 [L,QSA]"
