--- a/contact/config.ini
+++ b/contact/config.ini
@@ -1,8 +1,8 @@
-author="CrowkaiT"
-author_mail="crowkait@phpboost.com"
+author="julienseth78"
+author_mail="julien_seth_78@hotmail.fr"
 author_website="http://www.phpboost.com"
-version=4.0
-date="07/29/05"
+version=4.1.0
+date="03/01/13"
 compatibility="4.0"
 admin_main_page="index.php?url=/admin/"
 admin_menu="modules"
