--- a/calendar/config.ini
+++ b/calendar/config.ini
@@ -1,5 +1,5 @@
 author="julienseth78"
-author_mail="julien_seth_78@hotmail.fr"
+author_mail="julienseth78@phpboost.com"
 author_website="http://www.phpboost.com"
 version=4.1.0
 date="02/25/13"
