--- a/guestbook/config.ini
+++ b/guestbook/config.ini
@@ -1,5 +1,5 @@
 author="CrowkaiT, julienseth78"
-author_mail="crowkait@phpboost.com, julien_seth_78@hotmail.fr"
+author_mail="crowkait@phpboost.com, julienseth78@phpboost.com"
 author_website="http://www.phpboost.com"
 version=4.1.0
 date=07/11/05
