--- a/bugtracker/config.ini
+++ b/bugtracker/config.ini
@@ -1,5 +1,5 @@
 author="julienseth78"
-author_mail="julien_seth_78@hotmail.fr"
+author_mail="julienseth78@phpboost.com"
 author_website="http://www.phpboost.com"
 version=4.0
 date="13/03/2012"
