[MAJ]Avancement nouveau module Articles (ne pas installer)

--- a/articles2/config.ini
+++ b/articles2/config.ini
@@ -1,10 +1,10 @@
-author="ReidLos"
-author_mail="soldier.weasel@gmail.com"
+author="DaaX"
+author_mail="daaxwizeman@gmail.com"
 author_website="http://www.phpboost.com"
 version=4.0
-date="25/04/11"
+date="07/03/2013"
 compatibility="4.0"
-admin_main_page=""
+admin_main_page="index.php?url=/admin/config/"
 admin_menu="modules"
-home_page=""
-contribution_interface=""
+home_page="index.php"
+contribution_interface="index.php?url=/add"
