--- a/bugtracker/config.ini
+++ b/bugtracker/config.ini
@@ -1,10 +1,9 @@
 author="julienseth78"
-author_mail="julien_seth_78@hotmail.fr"
+author_mail="julienseth78@phpboost.com"
 author_website="http://www.phpboost.com"
-version=4.0
-date="13/03/2012"
+version=4.1.0
+date="30/01/2013"
 compatibility="4.0"
-home_page="index.php"
-admin_main_page="admin_bugtracker.php"
+home_page="/"
+admin_main_page="index.php?url=/admin"
 admin_menu="modules"
-rewrite_rules[]="RewriteRule ^bugtracker/bugtracker-([0-9]+)(\+?[^.]*)\.php$ DIR/bugtracker/bugtracker.php?view&id=$1 [L,QSA]"
