--- a/guestbook/config.ini
+++ b/guestbook/config.ini
@@ -1,9 +1,9 @@
-author="CrowkaiT, julienseth78"
-author_mail="crowkait@phpboost.com, julienseth78@phpboost.com"
+author="julienseth78"
+author_mail="julienseth78@phpboost.com"
 author_website="http://www.phpboost.com"
 version=4.1.0
-date=07/11/05
+date="29/06/2013"
 compatibility="4.0"
-home_page="/"
-admin_main_page="?url=/admin"
+home_page="index.php"
+admin_main_page="index.php?url=/admin"
 admin_menu="modules"
