--- a/bugtracker/config.ini
+++ b/bugtracker/config.ini
@@ -4,6 +4,6 @@ author_website="http://www.phpboost.com"
 version=4.1.0
 date="30/01/2013"
 compatibility="4.0"
-home_page="/"
+home_page="index.php"
 admin_main_page="index.php?url=/admin"
 admin_menu="modules"
