--- a/calendar/config.ini
+++ b/calendar/config.ini
@@ -2,8 +2,9 @@ author="julienseth78"
 author_mail="julienseth78@phpboost.com"
 author_website="http://www.phpboost.com"
 version=4.1.0
-date="02/25/13"
+date="25/02/2013"
 compatibility="4.0"
-home_page="/"
+home_page="index.php"
+contribution_interface="index.php?url=/add"
 admin_main_page="index.php?url=/admin"
 admin_menu="modules"
