--- a/contact/config.ini
+++ b/contact/config.ini
@@ -2,8 +2,8 @@ author="julienseth78"
 author_mail="julienseth78@phpboost.com"
 author_website="http://www.phpboost.com"
 version=4.1.0
-date="03/01/13"
+date="03/01/2013"
 compatibility="4.0"
-admin_main_page="index.php?url=/admin/"
+home_page="index.php"
+admin_main_page="index.php?url=/admin"
 admin_menu="modules"
-home_page="index.php?url=/"
