[FEATURE] Mise en place du nouveau syst?me de captcha (je dois ajouter un champ dans la config du contenu pour choisir le captcha), Veuillez r?installer PHPBoost.

--- a/install/distribution/distribution_pdk.ini
+++ b/install/distribution/distribution_pdk.ini
@@ -5,6 +5,8 @@ debug=true
 bench=true
 modules[]="BBCode"
 modules[]="TinyMCE"
+modules[]="PHPBoostCaptcha"
+modules[]="ReCaptcha"
 modules[]="connect"
 modules[]="database"
 modules[]="doc"
