--- a/install/distribution.ini
+++ b/install/distribution.ini
@@ -5,6 +5,8 @@ debug=true
 bench=true
 modules[]="BBCode"
 modules[]="TinyMCE"
+modules[]="PHPBoostCaptcha"
+modules[]="ReCaptcha"
 modules[]="articles"
 modules[]="calendar"
 modules[]="contact"
