--- a/install/distribution/distribution_full.ini
+++ b/install/distribution/distribution_full.ini
@@ -5,6 +5,8 @@ debug=false
 bench=true
 modules[]="BBCode"
 modules[]="TinyMCE"
+modules[]="PHPBoostCaptcha"
+modules[]="ReCaptcha"
 modules[]="articles"
 modules[]="calendar"
 modules[]="contact"
