--- a/news/config.ini
+++ b/news/config.ini
@@ -1,8 +1,8 @@
-author="CrowkaiT"
-author_mail="crowkait@phpboost.com"
+author="ReidLos"
+author_mail="kevin.massy@phpboost.com"
 author_website="http://www.phpboost.com"
 version=4.0
-date="06/20/05"
+date="13/08/19"
 compatibility="4.0"
 admin_main_page="index.php?url=/admin/config/"
 admin_menu="modules"
